[package]
name = "offline"
version = "0.1.0"
edition = "2021"

[dependencies]

###################################
#      Décodage / Vidéo           #
###################################
# GStreamer en Rust
gstreamer = "0.17"
gstreamer-app = "0.17"
gstreamer-audio = "0.17"
gstreamer-video = "0.17"
gstreamer-rtsp = "0.17"
gstreamer-rtsp-server = "0.17"
gstreamer-pbutils = "0.17"

# FFmpeg (bindings bas-niveau)
ffmpeg-sys = "4.3.3"
