[package]
name = "offline"
version = "0.1.0"
edition = "2021"

[dependencies]

###################################
#      Décodage / Vidéo           #
###################################
# GStreamer en Rust
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
gstreamer-audio = "0.23.5"
gstreamer-video = "0.23.5"
gstreamer-rtsp = "0.23.5"
gstreamer-rtsp-server = "0.23.5"
gstreamer-pbutils = "0.23.5"

# FFmpeg (bindings bas-niveau)
ffmpeg-next = "7.1.0"
ffmpeg-sys-next = "7.1.0"


